--- a/misc/gnome-dirs/Makefile
+++ b/misc/gnome-dirs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2005/04/28 23:04:08 jlam Exp $
+# $NetBSD: Makefile,v 1.13 2005/08/20 19:16:21 jlam Exp $
 #
 
 DISTNAME=	gnome-dirs-1.5
@@ -15,10 +15,10 @@ WRKSRC=		${WRKDIR}
 USE_LANGUAGES=	# empty
 USE_PKGINSTALL=	yes
 USE_X11BASE=	yes
-NO_CHECKSUM=	# defined
-NO_EXTRACT=	# defined
-NO_CONFIGURE=	# defined
-NO_BUILD=	# defined
+NO_CHECKSUM=	yes
+NO_EXTRACT=	yes
+NO_CONFIGURE=	yes
+NO_BUILD=	yes
 
 .include "dirs.mk"
 .include "../../mk/bsd.prefs.mk"
