--- a/misc/gnome2-dirs/Makefile
+++ b/misc/gnome2-dirs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.21 2005/04/28 23:04:08 jlam Exp $
+# $NetBSD: Makefile,v 1.22 2005/08/20 19:16:21 jlam Exp $
 #
 
 DISTNAME=	gnome2-dirs-1.5
@@ -14,10 +14,10 @@ COMMENT=	Shared GTK/GNOME (v2) directories
 WRKSRC=		${WRKDIR}
 USE_LANGUAGES=	# empty
 USE_PKGINSTALL=	yes
-NO_EXTRACT=	# defined
-NO_CHECKSUM=	# defined
-NO_CONFIGURE=	# defined
-NO_BUILD=	# defined
+NO_EXTRACT=	yes
+NO_CHECKSUM=	yes
+NO_CONFIGURE=	yes
+NO_BUILD=	yes
 
 .include "dirs.mk"
 .include "../../mk/bsd.prefs.mk"
