--- a/misc/xdg-x11-dirs/Makefile
+++ b/misc/xdg-x11-dirs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2005/06/01 18:03:05 jlam Exp $
+# $NetBSD: Makefile,v 1.8 2005/08/20 19:16:21 jlam Exp $
 #
 
 DISTNAME=	xdg-x11-dirs-1.2
@@ -13,10 +13,10 @@ COMMENT=	Shared XDG directories under the X11 tree
 
 CONFLICTS=	gnome2-dirs<=1.2
 
-NO_BUILD=	# defined
-NO_CONFIGURE=	# defined
-NO_CHECKSUM=	# defined
-NO_EXTRACT=	# defined
+NO_BUILD=	yes
+NO_CONFIGURE=	yes
+NO_CHECKSUM=	yes
+NO_EXTRACT=	yes
 USE_LANGUAGES=	# empty
 USE_PKGINSTALL=	yes
 USE_X11BASE=	yes
