--- a/pkgtools/digest/Makefile
+++ b/pkgtools/digest/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.45 2005/03/23 14:32:19 agc Exp $
+# $NetBSD: Makefile,v 1.46 2005/04/11 21:47:05 tv Exp $
 #
 # When adding new digest algorithms, please use rmd160 as the template,
 # and bump the VERSION definition.
@@ -16,7 +16,7 @@ PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
 GNU_CONFIGURE=		yes
 
-NO_PKGTOOLS_REQD_CHECK=	# defined
+NO_PKGTOOLS_REQD_CHECK=	yes
 NO_CHECKSUM=		yes
 
 # XXX Remove the following two lines after pkgsrc/bootstrap is up and
