--- a/graphics/gimp-ufraw/Makefile
+++ b/graphics/gimp-ufraw/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.8 2005/08/10 20:56:17 jlam Exp $
+# $NetBSD: Makefile,v 1.9 2005/09/27 00:31:18 gdt Exp $
 
 DISTNAME=		ufraw-0.5
 PKGNAME=		gimp-${DISTNAME}
+PKGREVISION=		1
 CATEGORIES=		graphics
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=ufraw/}
 
