--- a/devel/kdevelop-base/Makefile
+++ b/devel/kdevelop-base/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.43 2005/07/16 01:19:09 jlam Exp $
+# $NetBSD: Makefile,v 1.44 2005/07/30 12:11:41 markd Exp $
 
 DISTNAME=	kdevelop-3.2.2
 PKGNAME=	kdevelop-base-3.2.2
@@ -42,6 +42,13 @@ EVAL_PREFIX+=	\
 CONFIGURE_ARGS+= \
 	--with-qtdoc-dir=${QT3DIR}/qt3/doc/html \
 	--with-kdelibsdoxy-dir=${KDELIBDIR}/share/doc/kde/HTML/en/kdelibs-apidocs
+
+# a fix for qt-3.3.5, please remove if qt-3.3.6 (or newer) solves the problem
+SUBST_CLASSES+=		hints
+SUBST_STAGE.hints=	post-patch
+SUBST_MESSAGE.hints=	"Fix includehints."
+SUBST_FILES.hints=	parts/tools/addtooldlg.ui
+SUBST_FILTER_CMD.hints=	${GREP} -v includehint
 
 .include "../../databases/db3/buildlink3.mk"
 CPPFLAGS+= -I${BUILDLINK_PREFIX.db3}/include/db3
