--- a/textproc/docbook-xsl/Makefile
+++ b/textproc/docbook-xsl/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.28 2005/08/13 15:21:32 jmmv Exp $
+# $NetBSD: Makefile,v 1.29 2005/09/10 12:38:30 jmmv Exp $
 #
 
 DISTNAME=	docbook-xsl-1.69.1
@@ -35,6 +35,7 @@ do-install:
 	    ${ECHO} "cd ${WRKSRC} && ${PAX} -rw -pp -pm $$d ${XSLDIR}/"; \
 	    cd ${WRKSRC} && ${PAX} -rw -pp -pm $$d ${XSLDIR}/; \
 	done
+	${RM} ${XSLDIR}/common/pi.xsl.orig
 	${INSTALL_DATA} ${FILESDIR}/catalog ${XSLDIR}/catalog
 
 .include "../../textproc/xmlcatmgr/catalogs.mk"
