--- a/security/opencdk/Makefile
+++ b/security/opencdk/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.15 2005/04/11 21:47:14 tv Exp $
+# $NetBSD: Makefile,v 1.16 2005/08/30 14:28:46 adam Exp $
 
-DISTNAME=	opencdk-0.5.7
+DISTNAME=	opencdk-0.5.8
 CATEGORIES=	security devel
 MASTER_SITES=	http://josefsson.org/gnutls/releases/opencdk/ \
 		ftp://ftp.gnutls.org/pub/gnutls/opencdk/
@@ -13,6 +13,7 @@ PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
 USE_LIBTOOL=		yes
 GNU_CONFIGURE=		yes
+TEST_TARGET=		check
 
 NOT_FOR_COMPILER=	xlc
 
