--- a/math/gsl/Makefile
+++ b/math/gsl/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.20 2005/01/13 15:06:25 adam Exp $
+# $NetBSD: Makefile,v 1.21 2005/02/28 12:11:29 dmcmahill Exp $
 
-DISTNAME=	gsl-1.6
+DISTNAME=	gsl-1.7
 CATEGORIES=	math devel
 MASTER_SITES=	${MASTER_SITE_GNU:=gsl/}
 
