--- a/net/bittorrent/Makefile.common
+++ b/net/bittorrent/Makefile.common
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile.common,v 1.14 2005/07/26 13:50:58 gdt Exp $
-#
+# $NetBSD: Makefile.common,v 1.15 2005/08/07 16:15:55 recht Exp $
 
-DISTNAME=	BitTorrent-4.0.3
+DISTNAME=	BitTorrent-4.0.4
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=bittorrent/}
 
