--- a/print/teTeX1-bin/Makefile
+++ b/print/teTeX1-bin/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2005/06/01 18:03:20 jlam Exp $
+# $NetBSD: Makefile,v 1.17 2005/07/19 10:15:30 grant Exp $
 
 DISTNAME=	teTeX-src-1.0.7
 PKGNAME=	teTeX-bin-1.0.7
@@ -12,7 +12,7 @@ COMMENT=	TeX distribution for UNIX compatible systems - executables
 
 BUILD_DEPENDS+=	bison-[0-9]*:../../devel/bison
 DEPENDS+=	teTeX-share-1.0.[2-9]*:../../print/teTeX1-share
-DEPENDS+=	dialog-0.6z*:../../misc/dialog
+DEPENDS+=	dialog>=0.6z:../../misc/dialog
 
 # games/omega previously installed an omega executable too
 CONFLICTS+=	omega<0.90.4nb1
