--- a/devel/gnustep-make/Makefile
+++ b/devel/gnustep-make/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.20 2005/06/01 18:02:43 jlam Exp $
+# $NetBSD: Makefile,v 1.21 2005/07/29 12:57:13 adam Exp $
 
-DISTNAME=	gnustep-make-1.11.0
+DISTNAME=	gnustep-make-1.11.1
 CATEGORIES=	devel gnustep
 MASTER_SITES=	${MASTER_SITE_GNUSTEP:=core/}
 
