--- a/x11/gnustep-gui/Makefile
+++ b/x11/gnustep-gui/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.23 2005/06/01 18:03:29 jlam Exp $
+# $NetBSD: Makefile,v 1.24 2005/07/29 12:59:25 adam Exp $
 
-DISTNAME=	gnustep-gui-0.10.0
+DISTNAME=	gnustep-gui-0.10.1
 CATEGORIES=	x11 gnustep
 MASTER_SITES=	${MASTER_SITE_GNUSTEP:=core/}
 
