--- a/emulators/qemu/Makefile
+++ b/emulators/qemu/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.16 2005/07/29 17:34:16 xtraeme Exp $
+# $NetBSD: Makefile,v 1.17 2005/09/04 23:06:33 xtraeme Exp $
 #
 
 DISTNAME=		qemu-0.7.2
+PKGREVISION=		1
 CATEGORIES=		emulators
 MASTER_SITES=		http://fabrice.bellard.free.fr/qemu/
 
@@ -29,6 +30,10 @@ SUBST_MESSAGE.snd=	"Fixing hardcoded audio device."
 # Remove -march/-mcpu from CFLAGS, otherwise it will fail
 # to build in the SSE code.
 BUILDLINK_TRANSFORM+=	rm-optarg:-march rm-optarg:-mcpu
+
+post-install:
+	${INSTALL_DATA} ${FILESDIR}/Makefile.multinode-NetBSD \
+		${PREFIX}/share/doc/qemu
 
 .include "../../devel/SDL/buildlink3.mk"
 .include "../../mk/ossaudio.buildlink3.mk"
