--- a/editors/hnb/Makefile
+++ b/editors/hnb/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.15 2005/04/11 21:45:40 tv Exp $
+# $NetBSD: Makefile,v 1.16 2005/05/22 20:07:56 jlam Exp $
 #
 
 DISTNAME=	hnb-1.9.17
+PKGREVISION=	1
 CATEGORIES=	editors
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=hnb/}
 
