--- a/net/ttt/Makefile
+++ b/net/ttt/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.10 2005/04/11 21:47:01 tv Exp $
+# $NetBSD: Makefile,v 1.11 2005/06/01 18:03:08 jlam Exp $
 #
 
 DISTNAME=	ttt-1.8
+PKGREVISION=	1
 CATEGORIES=	net
 MASTER_SITES=	ftp://ftp.csl.sony.co.jp/pub/kjc/
 
