--- a/security/ruby-digest/Makefile
+++ b/security/ruby-digest/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.12 2005/03/06 16:52:40 taca Exp $
+# $NetBSD: Makefile,v 1.13 2005/04/11 21:47:18 tv Exp $
 #
 
 DISTNAME=	${RUBY_DISTNAME}
 PKGNAME=	${RUBY_PKGPREFIX}-digest-${RUBY_VERSION}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	security ruby
 MASTER_SITES=	${MASTER_SITE_RUBY}
 
