--- a/security/ruby-openssl/Makefile
+++ b/security/ruby-openssl/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.20 2005/03/06 16:52:40 taca Exp $
+# $NetBSD: Makefile,v 1.21 2005/04/11 21:47:18 tv Exp $
 
 DISTNAME=	${RUBY_DISTNAME}
 PKGNAME=	${RUBY_PKGPREFIX}-openssl-${RUBY_VERSION}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	security ruby
 MASTER_SITES=	${MASTER_SITE_RUBY}
 
