--- a/graphics/ruby-RMagick/Makefile
+++ b/graphics/ruby-RMagick/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.8 2005/07/17 14:39:21 taca Exp $
+# $NetBSD: Makefile,v 1.9 2005/09/13 14:38:14 taca Exp $
 
-DISTNAME=	RMagick-1.9.1
+DISTNAME=	RMagick-1.9.2
 PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME}
 CATEGORIES=	graphics ruby
-MASTER_SITES=	http://rubyforge.org/frs/download.php/5958/
+MASTER_SITES=	http://rubyforge.org/frs/download.php/6074/
+EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	obata@lins.jp
 HOMEPAGE=	http://rmagick.rubyforge.org/
