--- a/multimedia/gmplayer/Makefile
+++ b/multimedia/gmplayer/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.36 2005/07/15 18:27:52 jlam Exp $
+# $NetBSD: Makefile,v 1.37 2005/08/27 06:59:52 dogcow Exp $
 
 #
 # NOTE: if you are updating both mplayer and gmplayer, you must ensure
@@ -11,9 +11,10 @@
 PKGNAME=	gmplayer-${MPLAYER_PKG_VERSION}
 PKGREVISION=	1
 
-SKIN_SITES=	http://www.mplayerhq.hu/MPlayer/Skin/		\
-		ftp://ftp.mplayerhq.hu/MPlayer/Skin/		\
-		ftp://ftp.lug.udel.edu/MPlayer/Skin/		\
+SKIN_SITES=	http://www1.mplayerhq.hu/MPlayer/Skin/		\
+		ftp://ftp1.mplayerhq.hu/MPlayer/Skin/		\
+		http://ftp5.mplayerhq.hu/mplayer/Skin/		\
+		ftp://ftp5.mplayerhq.hu/mplayer/Skin/		\
 		ftp://ftp.freebsd.org/pub/FreeBSD/ports/distfiles/mplayer/ \
 		${MASTER_SITE_LOCAL:=mplayer}
 
