--- a/math/Makefile
+++ b/math/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.134 2005/08/13 08:00:40 adrianp Exp $
+# $NetBSD: Makefile,v 1.135 2005/09/08 15:29:28 drochner Exp $
 #
 
 COMMENT=	Mathematics
@@ -26,6 +26,7 @@ SUBDIR+=	euler
 SUBDIR+=	fftpack
 SUBDIR+=	fftw
 SUBDIR+=	fftw2
+SUBDIR+=	fftwf
 SUBDIR+=	galculator
 SUBDIR+=	gap
 SUBDIR+=	gcalctool
