--- a/mail/thunderbird-gtk1/Makefile
+++ b/mail/thunderbird-gtk1/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.2 2005/09/08 22:03:45 abs Exp $
+# $NetBSD: Makefile,v 1.3 2005/09/18 05:04:37 jlam Exp $
 
 MOZILLA=	thunderbird-gtk1
-PKGREVISION=	1
 
 COMMENT=	Mozilla mail client using the older GTK1 toolkit
 
