--- a/mail/thunderbird/Makefile
+++ b/mail/thunderbird/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.9 2005/09/08 22:03:45 abs Exp $
+# $NetBSD: Makefile,v 1.10 2005/09/18 05:04:37 jlam Exp $
 
 MOZILLA=	thunderbird
-PKGREVISION=	1
 
 COMMENT=	Mozilla mail client
 
