--- a/security/p5-Digest/Makefile
+++ b/security/p5-Digest/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.9 2005/07/13 18:01:39 jlam Exp $
+# $NetBSD: Makefile,v 1.10 2005/08/06 06:19:30 jlam Exp $
 #
 
-DISTNAME=	Digest-1.10
+DISTNAME=	Digest-1.12
 PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5dig
-PKGREVISION=	2
+PKGREVISION=	# empty
 CATEGORIES=	security perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Digest/}
 
