--- a/mail/imap-uw/Makefile
+++ b/mail/imap-uw/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.98 2005/08/12 19:47:17 tv Exp $
+# $NetBSD: Makefile,v 1.99 2005/09/28 20:52:23 rillig Exp $
 #
 # ATTENTION:
 # The Kerberos support in this software is known to be problematic. If you
@@ -37,6 +37,8 @@ BUILD_TARGET=	sg6
 .  else
 BUILD_TARGET=	sgi
 .  endif
+.elif ${OPSYS} == "OSF1"
+BUILD_TARGET=	osf
 .else
 BUILD_TARGET=	neb
 
