--- a/emulators/generator-cbiere/Makefile
+++ b/emulators/generator-cbiere/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.17 2005/06/01 18:02:47 jlam Exp $
+# $NetBSD: Makefile,v 1.1.1.1 2005/08/30 11:06:58 xtraeme Exp $
 #
 
-DISTNAME=	generator-0.35-cbiere-r1
-PKGNAME=	generator-cbiere-0.35r1
+DISTNAME=	generator-0.35-cbiere-r2
+PKGNAME=	generator-cbiere-0.35r2
 CATEGORIES=	emulators
 MASTER_SITES=	http://www.ghostwhitecrab.de/generator/
 EXTRACT_SUFX=	.tar.bz2
