--- a/x11/Makefile
+++ b/x11/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.406 2005/09/08 10:23:11 bouyer Exp $
+# $NetBSD: Makefile,v 1.407 2005/09/22 15:04:19 wiz Exp $
 #
 
 COMMENT=	Packages to support the X window system
@@ -143,6 +143,7 @@ SUBDIR+=	lablgtk
 SUBDIR+=	lablgtk2
 SUBDIR+=	labltk
 SUBDIR+=	lesstif
+SUBDIR+=	libexo
 SUBDIR+=	libxfce4gui
 SUBDIR+=	libxfce4mcs
 SUBDIR+=	libxfce4util
