--- a/devel/libgnomemm/Makefile
+++ b/devel/libgnomemm/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.1.1.1 2005/07/22 22:00:24 adam Exp $
+# $NetBSD: Makefile,v 1.2 2005/08/10 20:56:15 jlam Exp $
 
-DISTNAME=	libgnomemm-2.10.0
+DISTNAME=	libgnomemm-2.12.0
 CATEGORIES=	devel
-MASTER_SITES=	${MASTER_SITE_GNOME:=sources/libgnomemm/2.10/}
+MASTER_SITES=	${MASTER_SITE_GNOME:=sources/libgnomemm/2.12/}
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	adam@NetBSD.org
