--- a/audio/mpg123-esound/Makefile
+++ b/audio/mpg123-esound/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.10 2005/01/12 14:17:44 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2005/03/09 20:16:27 minskim Exp $
 
 PKGNAME=	mpg123-esound-${MPG123_VERSION}
-PKGREVISION=	5
+PKGREVISION=	6
 COMMENT=	Command-line player for mpeg layer 1, 2 and 3 audio with EsounD
 
 TARGET_SUFFIX=	-esd
